test_regress/t/t_class_class.out
%Error: t/t_class_class.v:12:4: Unsupported: class within class
   class SubCls;
   ^~~~~
%Error: Exiting due to
